# BinauralMind

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  gnaural.desktop  gnaural.desktop.in
CVS/: Entries  Repository
debian/: README.Debian  changelog  conffiles.ex  control  copyright  gnaural.1x  gnaural.doc-base.EX  manpages  menu  rules
debian/CVS/: Entries  Repository
m4/: ChangeLog
m4/CVS/: Entries  Repository  Root
misc/: ChangeInternalPaths.sh  Gnaural.iss  HOWTO_BuildWindowsInstaller.txt  HOWTO_CrossCompileGnauralForWin32.txt  HOWTO_Gnaural_CompileForMacOS.txt  HOWTO_Gnaural_StaticLink.txt  HOWTO_MakeYourDeb.txt  license.txt
misc/CVS/: Entries  Repository
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
pixmaps/: gnaural-icon.xpm
pixmaps/CVS/: Entries  Repository
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  de.po  gnaural.pot
po/CVS/: Entries  Repository
src/: BinauralBeat.c  BinauralBeat.h  Makefile  Makefile.am  Makefile.in  ScheduleGUI.c  ScheduleGUI.h  ScheduleXML.c  ScheduleXML.h  callbacks.c  callbacks.h  exportAudio.c  exportAudio.h  gnaural.glade  gnauralRecentMenu.c  gnauralRecentMenu.h  gnauralVU.c  gnauralVU.h  gnauralXML.c  gnauralXML.h  gnauralnet.h  gnauralnet_clocksync.c  gnauralnet_gui.c  gnauralnet_lists.c  gnauralnet_main.c  gnauralnet_running.c  gnauralnet_socket.c  main.c  main.h  main_ArrayConstants.h  playAudio.c  playAudio.h  voiceGUI.c  voiceGUI.h
src/.deps/: .cvsignore  BinauralBeat.Po  ScheduleGUI.Po  ScheduleXML.Po  callbacks.Po  exportAudio.Po  gnauralRecentMenu.Po  gnauralVU.Po  gnauralXML.Po  gnauralnet_clocksync.Po  gnauralnet_gui.Po  gnauralnet_lists.Po  gnauralnet_main.Po  gnauralnet_running.Po  gnauralnet_socket.Po  main.Po  playAudio.Po  voiceGUI.Po
src/CVS/: Entries  Repository
src/CVS/RevisionCache/: BinauralBeat.c#1.29  BinauralBeat.h#1.16  ScheduleGUI.c#1.16  ScheduleGUI.h#1.10
src/net/: LandCaster.c  LandCaster.h  MakeLand.c  MakeLand.h  Makefile  Makefile.am  Makefile.in  gnauralnet_client_example.c  gnauralnet_flasher.c  gnauralnet_flasher.h  gnauralscape.c
src/net/.deps/: .cvsignore  LandCaster.Po  MakeLand.Po  gnauralnet_client_example.Po  gnauralnet_clocksync.Po  gnauralnet_flasher.Po  gnauralnet_lists.Po  gnauralnet_main.Po  gnauralnet_socket.Po  gnauralscape.Po
src/net/CVS/: Entries  Repository
